Use iron flex layout  to control admin form layout

--- a/static/components/tracking-routes.html
+++ b/static/components/tracking-routes.html
@@ -14,8 +14,8 @@
       padding: 25px;
     }
     .route-map {
-      width: 750px;
-      height: 500px;
+      width: 650px;
+      height: 450px;
     }
     .routes-container {
       background: #ffffff;
@@ -40,7 +40,7 @@
     <div class="route-list">
       <template is="dom-if" if="{{routes}}">
         <paper-material class="routes-container">
-          <h1> All Routes </h1>
+          <h1> Routes </h1>
           <template is="dom-repeat" items="{{routes}}" as="route">
             <b> Name: </b> <span>{{route.name}}</span>
             <b> StartTime: </b> <span>{{route.startTime}}</span>
@@ -56,25 +56,30 @@
 
     <paper-material class="route-form">
       <h1> New Route </h1>
-      <google-map id="routeMap" class="route-map" click-events="true" zoom="{{zoom}}" latitude="{{lat}}" longitude="{{lng}}"></google-map>
-      <br />
-      <form class="new-route" is="iron-form" id="routeForm" content-type="application/json" method="post" action="/routes/create">
-        <paper-input name="name" label="Route Name"></paper-input>
-        <paper-input name="description" label="Description"></paper-input>
-        <paper-input name="startTime" label="Start Time"></paper-input>
-        <paper-input name="endTime" label="End Time"></paper-input>
-        <paper-input name="color" label="Color"></paper-input>
-        <paper-input name="width" label="Width"></paper-input>
-        <br />
-        <div> 
-          Route Enabled?
-          <paper-toggle-button checked="{{isEnabled}}"></paper-toggle-button> 
-          <input is="iron-input" type="hidden" name="enabled" value="{{isEnabled}}">
+      <div class="layout horizontal">
+        <div class="flex">
+          <google-map id="routeMap" class="route-map" click-events="true" zoom="{{zoom}}" latitude="{{lat}}" longitude="{{lng}}"></google-map>
         </div>
-        <br />
-        <input type="hidden" name="coords" id="formRouteCoords">
-        <paper-button class="submit-route" raisedButton onclick="submitRoute()">Submit</paper-button>
-      </form>
+        <div class="flex">
+          <form is="iron-form" id="routeForm" content-type="application/json" method="post" action="/routes/create">
+            <paper-input name="name" label="Route Name"></paper-input>
+            <paper-input name="description" label="Description"></paper-input>
+            <paper-input name="startTime" label="Start Time"></paper-input>
+            <paper-input name="endTime" label="End Time"></paper-input>
+            <paper-input name="color" label="Color"></paper-input>
+            <paper-input name="width" label="Width"></paper-input>
+            <br />
+            <div> 
+              Route Enabled?
+              <paper-toggle-button checked="{{isEnabled}}"></paper-toggle-button> 
+              <input is="iron-input" type="hidden" name="enabled" value="{{isEnabled}}">
+            </div>
+            <br />
+            <input type="hidden" name="coords" id="formRouteCoords">
+            <paper-button class="submit-route" raisedButton onclick="submitRoute()">Submit</paper-button>
+          </form>
+        </div>
+      </div>
     </paper-material>
   </template>
 
