--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -1,5 +1,7 @@
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animations.html">
 <link rel="import" href="../../bower_components/google-map/google-map.html">
 
 <dom-module id="shuttles-map"> 
@@ -55,8 +57,11 @@
     <div id="logo">
       <img src="../images/logo.png" />
     </div>
-    <div id="menu">>
+    <div id="menu">
       <paper-fab on-click="toggleMenu" icon="menu"></paper-fab>
+      <paper-dialog id="menuDialog" entry-animation="slide-from-left-animation" exit-animation="slide-right-animation" with-backdrop>
+        <h2>RPI Shuttle Tracking</h2>
+      </paper-dialog>
     </div>
   </template>
 
@@ -93,7 +98,7 @@
       },
 
       toggleMenu: function() {
-        
+        this.$.menuDialog.open();
       },
 
       initializeTracking: function() {
