--- a/static/components/tracking-stops.html
+++ b/static/components/tracking-stops.html
@@ -93,7 +93,7 @@
             <input type="hidden" name="lat" id="stopLat">
             <input type="hidden" name="lng" id="stopLng">
             <input type="hidden" name="routeId" value="{{selectedRoute.value}}">
-            <paper-button class="submit-stop" raisedButton onclick="submitStop()">Submit</paper-button>
+            <paper-button class="submit-stop" raised onclick="submitStop()">Submit</paper-button>
           </form>
         </div>
       </div>
