--- a/static/components/tracking-vehicles.html
+++ b/static/components/tracking-vehicles.html
@@ -77,7 +77,7 @@
         <paper-input name="vehicleName" label="Vehicle Name"></paper-input>
         <paper-input name="vehicleID" label="Vehicle ID"></paper-input>
         <br />
-        <paper-button raisedButton onclick="submitVehicle()">Submit</paper-button>
+        <paper-button raised onclick="submitVehicle()">Submit</paper-button>
       </form>
     </paper-material>
   </template>
