--- a/static/components/tracking-routes.html
+++ b/static/components/tracking-routes.html
@@ -76,7 +76,7 @@
             </div>
             <br />
             <input type="hidden" name="coords" id="formRouteCoords">
-            <paper-button class="submit-route" raisedButton onclick="submitRoute()">Submit</paper-button>
+            <paper-button class="submit-route" raised onclick="submitRoute()">Submit</paper-button>
           </form>
         </div>
       </div>
