--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -66,6 +66,12 @@
       handle-as="json"
       on-response="placeStops">
     </iron-ajax>
+    <iron-ajax
+      id="fetchMessages"
+      url="/updates/message"
+      handle-as="json"
+      last-response="{{messages}}">
+    </iron-ajax>
 
     <google-map id="shuttleMap" class="shuttle-map" zoom="{{zoom}}" latitude="{{lat}}" longitude="{{lng}}"></google-map>
     <div id="logo">
@@ -138,6 +144,10 @@
         stops: {
           type: Array,
           value: []
+        },
+        messages: {
+          type: Array,
+          value: []
         }
       },
 
@@ -150,6 +160,7 @@
       },
 
       initializeTracking: function() {
+        this.$.fetchMessages.generateRequest();
         this.$.fetchRoutes.generateRequest();
         this.$.fetchUpdates.generateRequest();
         this.$.fetchStops.generateRequest();
@@ -158,6 +169,7 @@
 
       periodicUpdates: function() {
         // periodically check for vehicle & route updates
+        setInterval(this.checkForUpdates, 15000, this.$.fetchMessages);
         setInterval(this.checkForUpdates, 15000, this.$.fetchUpdates);
         setInterval(this.checkForUpdates, 15000, this.$.fetchRoutes);
         setInterval(this.checkForUpdates, 15000, this.$.fetchStops);
@@ -165,20 +177,6 @@
 
       checkForUpdates: function(ajax) {
         ajax.generateRequest();
-      },
-
-      // Translate heading (0-360 degrees) to cardinal direction
-      cardinalDirection: function(heading) {
-        switch (true) {
-          case (heading >= 22.5 && heading < 67.5):   return "North-East";
-          case (heading >= 67.5 && heading < 112.5):  return "East";
-          case (heading >= 112.5 && heading < 157.5): return "South-East";
-          case (heading >= 157.5 && heading < 202.5): return "South";
-          case (heading >= 202.5 && heading < 247.5): return "South-West";
-          case (heading >= 247.5 && heading < 292.5): return "West";
-          case (heading >= 292.5 && heading < 337.5): return "North-West";
-          default:                                    return "North";
-        }
       },
 
       placeVehicles: function(event, response) {
@@ -200,15 +198,10 @@
               title: updates[i]["vehicleID"]
             });
             
-            // Get cardinal direction for info window
-            var cardinal_dir = this.cardinalDirection(updates[i]["heading"]);
+            // Get update message for the info window
+            var contentString = this.messages[i];
             // Create info window and open it when shuttle clicked
             (function(marker, i) {
-              /* Include ID, heading, speed, time in the infowindow */
-              var contentString = '<b>Shuttle ID: ' + updates[i]["vehicleID"] + '</b><br />' +
-              'Traveling ' + cardinal_dir + ' at ' + updates[i]["speed"].substring(0,4) + 'mph<br />' +
-              'as of ' + updates[i]["time"].substring(0,2) + ':' + updates[i]["time"].substring(2,4) + ':' + updates[i]["time"].substring(4,6);
-              
               var infowindow = new google.maps.InfoWindow({
                 content: contentString
               });
