--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -195,7 +195,7 @@
               position: pos,
               map: this.$.shuttleMap.map,
               icon: "static/images/shuttle.png",
-              title: updates[i]["vehicleID"]
+              title: updates[i]["vehicleID"] // rotation...
             });
             
             // Get update message for the info window
