--- a/static/components/tracking-vehicles.html
+++ b/static/components/tracking-vehicles.html
@@ -45,6 +45,8 @@
       last-response="{{vehicles}}">
     </iron-ajax>
 
+    <iron-ajax id="ajaxDelete" method="DELETE" on-response="addVehicleResponse"></iron-ajax>
+
     <div class="vehicle-list">
       <template is="dom-if" if="{{vehicles}}">
         <paper-material class="vehicles-container">
@@ -85,10 +87,14 @@
         this.$.updateVehicles.generateRequest();
       },
       editVehicle: function(e) {
-        
+
       },
       deleteVehicle: function(e) {
-        
+        var entry = Polymer.dom(e).path[6].textContent;
+        var index = entry.search('I');
+        var id = entry.substring(index+5,index+15);
+        this.$.ajaxDelete.url = "/vehicles/" + id;
+        this.$.ajaxDelete.generateRequest();
       }
     });
 
