--- a/static/components/tracking-vehicles.html
+++ b/static/components/tracking-vehicles.html
@@ -4,37 +4,9 @@
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/paper-material/paper-material.html">
+<link rel="stylesheet" type="text/css" href="../css/tracking-vehicles.css">
 
 <dom-module id="tracking-vehicles">
-  <style>
-    .vehicle-form {
-      margin: 25px;
-      padding: 20px;
-      background: #ffffff;
-    }
-    .vehicle-form paper-button {
-      background: #3f51b5;
-      color: white;
-    }
-    .vehicle-card {
-      margin: 5px;
-    }
-    .vehicle-list h1 {
-      margin-left: 15px;
-    }
-    .vehicle-list .vehicle-card {
-      margin-left: 15px;
-    }
-    .vehicle-action {
-      --iron-icon-height: 20px;
-      --iron-icon-width: 20px;
-    }
-    .vehicles-container {
-      margin: 25px;
-      padding: 10px;
-      background: #ffffff;
-    }
-  </style>
 
   <template>
     <iron-ajax
