Fix popout box too little for text

--- a/static/css/shuttles-map.css
+++ b/static/css/shuttles-map.css
@@ -31,6 +31,8 @@
     }
     .menu-dialog {
       width: 50%;
-      height: 35%;
+      min-height: 35%;
+      max-height: 50%;
       font-size: 16px;
+      overflow: scroll;
     }
