--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -156,6 +156,7 @@
             // Place shuttle marker on map
             var marker = new google.maps.Marker({
               position: pos,
+              rotation: updates[i]["heading"],
               map: this.$.shuttleMap.map,
               icon: "static/images/shuttle.png",
               title: updates[i]["vehicleID"]
