attempt to make marker ratatable, need a svg image added

--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -156,9 +156,11 @@
             // Place shuttle marker on map
             var marker = new google.maps.Marker({
               position: pos,
-              rotation: updates[i]["heading"],
               map: this.$.shuttleMap.map,
-              icon: "static/images/shuttle.png",
+              icon: {
+                path: "static/images/shuttle.png",
+                rotation: updates[i]["heading"]
+              },
               title: updates[i]["vehicleID"]
             });
             
