first implementation of arrival time function

--- a/static/components/tracking-stops.html
+++ b/static/components/tracking-stops.html
@@ -137,6 +137,12 @@
         this.$.stopLat.value = this.stopMarker.position.lat();
         this.$.stopLng.value = this.stopMarker.position.lng();
       },
+      deleteStop: function(){
+        
+      },
+      editStop: function(){
+        
+      }
       addStopResponse: function() {
         this.$.updateStops.generateRequest();
       }
