Delete functions are working for all vehicles, routes, and stops

--- a/static/components/tracking-stops.html
+++ b/static/components/tracking-stops.html
@@ -165,6 +165,9 @@
       },
       addStopResponse: function() {
         this.$.updateStops.generateRequest();
+      },
+      deleteStop: function(e) {
+        this.splice('stops', e.model.index, 1);
       }
     });
 
