--- a/static/components/shuttles-map.html
+++ b/static/components/shuttles-map.html
@@ -162,6 +162,8 @@
               position: pos,
               map: this.$.shuttleMap.map,
               icon: {
+                // Replace this path for future shuttle icon
+                //  icon has to be an svg file
                 path: google.maps.SymbolPath.FORWARD_CLOSED_ARROW,
                 scale: 2.5,
                 rotation: parseInt(updates[i]["heading"])
